@@ -1,30 +1,47 @@
+# Contains the OSM::Database class.
 
 require 'OSM/objects.rb'
 
 module OSM
 
-    # An OSM database. It holds nodes, ways and relations in memory.
+    # An OSM database. It holds nodes, ways, and relations in memory. Contents are unordered.
+    #
+    # If you add an object to the database with the same ID as a previously added object, the old object will be silently
+    # deleted from the database and the new one will be added.
     class Database
 
+        DEFAULT_API_VERSION = '0.5'
+        DEFAULT_XML_GENERATOR = 'Ruby-OSMLib'
+
+        # OpenStreetMap API version of this database
         attr_accessor :version
 
         # a hash of all nodes
-        attr_accessor :nodes
+        attr_reader :nodes
 
         # a hash of all ways
-        attr_accessor :ways
+        attr_reader :ways
 
         # a hash of all relations
-        attr_accessor :relations
+        attr_reader :relations
 
         # Create an empty database.
-        def initialize
+        #
+        # version:: OpenStreetMap API Version (String, Default: DEFAULT_API_VERSION)
+        #
+        # call-seq: OSM::Database.new(version) -> OSM::Database
+        #
+        def initialize(version = DEFAULT_API_VERSION)
+            @version = version
             clear
         end
 
         # Delete all nodes, ways and relations from the database.
         # You should call this before deleting a database to break
         # internal loop references.
+        #
+        # call-seq: clear
+        #
         def clear
             @nodes     = Hash.new
             @ways      = Hash.new
@@ -33,36 +50,51 @@ module OSM
 
         # Add a Node to the database.
         def add_node(node)
-            @nodes[node.id.to_i] = node
+            id = node.id.to_i
+            @nodes[id].db = nil if @nodes[id] # remove old object with same id from database
+            @nodes[id] = node
             node.db = self
         end
 
         # Add a Way to the database.
         def add_way(way)
-            @ways[way.id.to_i] = way
+            id = way.id.to_i
+            @ways[id].db = nil if @ways[id] # remove old object with same id from database
+            @ways[id] = way
             way.db = self
         end
 
         # Add a Relation to the database.
         def add_relation(relation)
-            @relations[relation.id.to_i] = relation
+            id = relation.id.to_i
+            @relations[id].db = nil if @relations[id] # remove old object with same id from database
+            @relations[id] = relation
             relation.db = self
         end
 
-        # Get node from db with given ID. Returns nil if there is no node
+        # Get node from the database with given ID. Returns nil if there is no node
         # with this ID.
+        #
+        # call-seq: get_node(id) -> OSM::Node or nil
+        #
         def get_node(id)
             @nodes[id.to_i]
         end
 
-        # Get way from db with given ID. Returns nil if there is no way
+        # Get way from the database with given ID. Returns nil if there is no way
         # with this ID.
+        #
+        # call-seq: get_node(id) -> OSM::Way or nil
+        #
         def get_way(id)
             @ways[id.to_i]
         end
 
-        # Get relation from db with given ID. Returns nil if there is no relation
+        # Get relation from the database with given ID. Returns nil if there is no relation
         # with this ID.
+        #
+        # call-seq: get_node(id) -> OSM::Relation or nil
+        #
         def get_relation(id)
             @relations[id.to_i]
         end
@@ -71,6 +103,7 @@ module OSM
         #
         # call-seq: db << object -> db
         #
+        # object:: object of class Node, Way, or Relation
         def <<(object)
             case object
                 when OSM::Node     then add_node(object)
@@ -81,6 +114,32 @@ module OSM
             self
         end
 
+        # Dump database to XML. This uses the XML Builder library
+        #
+        # doc:: Builder::XmlMarkup object
+        # generator:: Name of generator to put in generator attribute of osm element (String, Default: DEFAULT_XML_GENERATOR)
+        #
+        # This method is used like this:
+        #
+        #   db = OSM::Database.new
+        #   # add data to database...
+        #   doc = Builder::XmlMarkup.new(:indent => 2, :target => STDOUT)
+        #   doc.instruct!
+        #   db.to_xml(doc, 'test')
+        #
+        def to_xml(doc, generator=DEFAULT_XML_GENERATOR)
+            doc.osm(:generator => generator, :version => version) do |xml|
+                nodes.each_value do |node|
+                    node.to_xml(xml)
+                end
+                ways.each_value do |way|
+                    way.to_xml(xml)
+                end
+                relations.each_value do |way|
+                    way.to_xml(xml)
+                end
+            end
+        end
     end
 
 end
