@@ -6,7 +6,7 @@ class NodeTest < Test::Unit::TestCase
 
     def setup
         @node1 = OSM::Node.new(17, 'somebody', '2007-02-20T10:29:49+00:00', 8.5, 47.5)
-        @node2 = OSM::Node.new(25, 'somebodyelse', '2007-03-20T00:00:00+00:00')
+        @node2 = OSM::Node.new(25, 'somebodyelse', '2007-03-20T00:00:00Z')
     end
 
     def test_create
@@ -19,15 +19,24 @@ class NodeTest < Test::Unit::TestCase
         assert_kind_of Hash, @node1.tags
         assert @node1.tags.empty?
         assert_nil @node1.tags['foo']
+
+        hash = {:id => 17, :user => 'somebody', :timestamp => '2007-02-20T10:29:49+00:00', :lon => '8.5', :lat => '47.5'}
+        assert_equal hash, @node1.attributes
+        hash = {:id => 25, :user => 'somebodyelse', :timestamp => '2007-03-20T00:00:00Z'}
+        assert_equal hash, @node2.attributes
     end
 
     def test_tags
         assert @node1.tags.empty?
 
-        @node1.tags['highway'] = 'residential'
-        assert_equal 'residential', @node1.tags['highway']
+        @node1.tags['tourism'] = 'hotel'
+        assert_equal 'hotel', @node1.tags['tourism']
+        assert_equal 'hotel', @node1['tourism']
         assert_nil @node1.tags['doesnt_exist']
         assert ! @node1.tags.empty?
+
+        @node1['name'] = 'Hotel Alfredo'
+        assert_equal 'Hotel Alfredo', @node1['name']
 
         @node2.add_tags('amenity' => 'fuel', 'name' => 'ESSO')
         assert_equal 'fuel', @node2.tags['amenity']
@@ -37,22 +46,24 @@ class NodeTest < Test::Unit::TestCase
     end
 
     def test_init
-        assert_raise ArgumentError do
-            node = OSM::Node.new()
-        end
-        node = OSM::Node.new(4)
-        assert 4, node.id
-        assert_nil node.user
+        node1 = OSM::Node.new
+        node2 = OSM::Node.new
+        node3 = OSM::Node.new(4)
+        assert node1.id < 0
+        assert node2.id < 0
+        assert_not_equal node1.id, node2.id
+        assert_equal 4, node3.id
+        assert_nil node1.user
 
-        node.user = 'me'
-        assert_equal 'me', node.user
+        node1.user = 'me'
+        assert_equal 'me', node1.user
 
-        assert_nil node.timestamp
+        assert_nil node1.timestamp
         assert_raise ArgumentError do
-            node.timestamp = 'xxx'
+            node1.timestamp = 'xxx'
         end
-        node.timestamp = '2007-06-17T16:02:34+01:00'
-        assert_equal '2007-06-17T16:02:34+01:00', node.timestamp
+        node1.timestamp = '2007-06-17T16:02:34+01:00'
+        assert_equal '2007-06-17T16:02:34+01:00', node1.timestamp
     end
 
     def test_id
